# c-dev-playground

./: .gitignore  README.md
codewars/: CMakeLists.txt  Makefile  compose.yml
codewars-test/: .env  CMakeLists.txt  Makefile  compose.yml
codewars-test/ex_00/: module.c
codewars-test/ex_01/: module.c  module_test.c
codewars-test/ex_02/: module.c  module_test.c
codewars/src/: CMakeLists.txt
codewars/src/modules/: CMakeLists.txt
codewars/src/modules/test_00/: module.c
codewars/src/modules/test_01/: CMakeLists.txt  module.c
docker-template/: CMakeLists.txt  Makefile  compose.yml
docker-template/container/: Dockerfile
docker-template/src/: CMakeLists.txt
docker-template/src/app/: CMakeLists.txt  main.c  main.h
docker-template/src/modules/: CMakeLists.txt
docker-template/src/modules/test/: CMakeLists.txt
docker-template/src/modules/test/inc/: test.h
docker-template/src/modules/test/src/: test.c
leetcode/: Makefile
leetcode/src/app/: main.c
leetcode/src/modules/ex_00/: module.c
leetcode/src/modules/ex_01/: module.c
leetcode/src/modules/ex_02/: module.c
leetcode/src/modules/ex_03/: module.c
leetcode/src/modules/ex_04/: module.c  module.h
leetcode/src/modules/ex_05/: module.c
template/: CMakeLists.txt  Makefile  compose.yml
template/container/: Dockerfile
template/src/app/: AppConfig.h.in  CMakeLists.txt  main.c
template/src/libs/test/: CMakeLists.txt  test_mod.c  test_mod.h
